# redirect-to-store

./: main.py  pyproject.toml
template/: index.html
