[tool.poetry]
name = "redirect-to-store"
version = "0.1.0"
description = ""
authors = ["hoanghuumanh54 <hoanghuumanh54@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "uvicorn"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
